[gd_scene load_steps=12 format=3 uid="uid://b1vhh0gbxm27"]

[ext_resource type="Script" path="res://enemy/normal_file/normal_file.gd" id="1_6aj4h"]
[ext_resource type="Script" path="res://folder/inventory_file.gd" id="2_1hj5p"]
[ext_resource type="Texture2D" uid="uid://xk5xakv8njmn" path="res://enemy/normal_file/HextechGunblade - Copy.png" id="3_qmyit"]
[ext_resource type="Texture2D" uid="uid://dyvdnvjmp6q61" path="res://enemy/normal_file/normalfile.PNG" id="4_i6mna"]

[sub_resource type="Resource" id="Resource_vyk3c"]
script = ExtResource("2_1hj5p")
name = "Normal"
texture = ExtResource("3_qmyit")

[sub_resource type="CircleShape2D" id="CircleShape2D_1l8qm"]
radius = 78.2304

[sub_resource type="Animation" id="Animation_sasmg"]
resource_name = "hit"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhpfo"]
_data = {
"hit": SubResource("Animation_sasmg")
}

[sub_resource type="Animation" id="Animation_usl4e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.202151, 0.202151)]
}

[sub_resource type="Animation" id="Animation_rh5h6"]
resource_name = "spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0.202, 0.01), Vector2(0.195, 0.25), Vector2(0.202151, 0.202151)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8wc4"]
_data = {
"RESET": SubResource("Animation_usl4e"),
"spawn": SubResource("Animation_rh5h6")
}

[node name="normalFile" type="CharacterBody2D"]
script = ExtResource("1_6aj4h")
file = SubResource("Resource_vyk3c")
metadata/broken_pos = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.202151, 0.202151)
texture = ExtResource("4_i6mna")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 1)
shape = SubResource("CircleShape2D_1l8qm")

[node name="hp" type="Label" parent="."]
offset_left = -21.0
offset_top = 73.0
offset_right = 19.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hitanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mhpfo")
}

[node name="spawnanim" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_e8wc4")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
